add categories to jobs

--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,8 +1,9 @@
 = simple_form_for(@job, hymml: {class: 'form-horixontal'}) do |f|
+  = f.collection_select :category_id, Category.all, :id, :name, {promt: "Choose a category"}
   = f.input :title, label: "Job Title"
   = f.input :description, label: "Job Description"
   = f.input :company, label: "your Company"
   = f.input :url, label: "Link to job"
   %br/
   = f.button :submit
-  
+
