--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,9 +1,9 @@
 = simple_form_for(@job, hymml: {class: 'form-horixontal'}) do |f|
-  = f.collection_select :category_id, Category.all, :id, :name, {promt: "Choose a category"}
-  = f.input :title, label: "Job Title"
-  = f.input :description, label: "Job Description"
-  = f.input :company, label: "your Company"
-  = f.input :url, label: "Link to job"
+  = f.collection_select :category_id, Category.all, :id, :name, {promt: "Choose a category"}, input_html: { class: "dropdown-toggle"}
+  = f.input :title, label: "Job Title", input_html: { class: "form-control"}
+  = f.input :description, label: "Job Description", input_html: { class: "form-control"}
+  = f.input :company, label: "your Company", input_html: { class: "form-control"}
+  = f.input :url, label: "Link to job", input_html: { class: "form-control"}
   %br/
   = f.button :submit
 
